# Mimosa-AI

./: .env.example  .gitignore  CODE_REVIEW.md  CONTRIBUTING.md  NOTICE  README.CHS.md  README.CHT.md  README.JPN.md  README.KOR.md  README.MD  README.md  cleanup.sh  config.py  config_default.json  config_eval_gpt4o.json  docker-compose.yml  list_tools.sh  main.py  memory_explorer.py  memory_timelapse.py  pyproject.toml  requirements.txt  ruff.toml  start_services.sh  test_tools_manager.py
.github/: pull_request_template.md
CLA/: CORPORATE_CLA.md  EMPLOYER_AUTHORIZATION.md  INDIVIDUAL_CLA.md
backend/: api.py  cli.py  install.sh
backend/sources/: browser.py  interaction.py  llm_provider.py  logger.py  memory.py  utility.py
cached_server/: go.mod  main.go
datasets/: datascience_papers.csv  our_benchmark.csv  paper_bench.csv  paper_bench_light.csv
datasets/ScienceAgentBench/: README.md
datasets/runs/: summary_GSMK8_20250728_113102.txt
datasets/scenarios/: XOmiVAE_paper.json  feature_detection.json  gene_expression_analysis.json  protein_structure_analysis.json
docs/: CONTRIBUTING.md  DEVELOPER_GUIDE.md  DGM_ANALYSIS_AND_IMPROVEMENTS.md  EVAL.md  MASS_TESTING.md  MULTI_GOAL_MODE.md  QUICK_RESEARCH_GUIDE.md  cla-process.md  description.md  evaluation_rubric_format.md  licensing-notes.md  math.md  papers_bench_evaluation.md  planner_improvements.md  project.mermaid  science_agent_bench_evaluation.md
docs/diagrams/: class_diagram.mermaid  illustrate_instruments_use.mermaid  illustrate_papers_reproduciton.mermaid  layers_diagram.puml  mimosa_core.mermaid
experimentation/: browser_smolagent.py  e2b_sandbox.py  e2b_smol_flow.py  langchain_a2a.py  meta_agent_idea.py
experimentation/langraph/: langgraph.py
experimentation/matplotlib/: matplotlib_network.py  tree_visualizer_matplotlib.py
experimentation/smolagent/: browser_smolagent.py  sandboxed_smolagent.py
frontend/: Dockerfile.frontend
frontend/mimosa-front/: package-lock.json  package.json
meta-agent-prototype/: .debug.py  main.py  sandbox_requirements.txt
meta-agent-prototype/core/: craft_workflow.py  smolagent_factory.py
meta-agent-prototype/prompts/: workflow_creator.md
mimosa/: .debug.py  config.py  main.py  orchestrator.py  requirements.txt
mimosa-env/: pyvenv.cfg
mimosa/core/: code_runner.py  craft_workflow.py  dgm.py  llm_provider.py  notify.py  orchestrator.py  provider.py  runner.py  tools_manager.py  (+1 more)
prototype/: craft_workflow.py  e2b_smol_flow.py  main.py  py_sandbox.py  schema_factory.py  smolagent_factory.py
run_notes/: clintox_multitask_classifier.json  clintox_multitask_ecfp.json  clintox_multitask_ecfp_predictions.json  dkpes_signal_inhibition_tanimoto_visualization.json  factors_correlations_compute_save.json  factors_correlations_histogram.json  run_001.json  run_001_20250904_150754_dcfcad32.json  run_001_20250904_153555_1ffc686d.json  run_001_20250905_100436_28c5a604.json  run_001_20250905_121826_231a898b.json  run_001_20250908_122926_1509f2ca.json  run_001_20250911_141940_fc38fff2.json  run_001_20250912_123029_f4e5a58b.json  run_001_20250923_145919_238b721e.json  run_002_20250905_122800_bdbb7fe1.json  run_002_20250908_123250_92a2a236.json  run_003_20250905_123813_f789c683.json  run_004_20250905_125056_acc46dc9.json  train_multitask_classifier_on_clintox_dataset.json  train_multitask_clintox_fda_ct_tox.json  train_multitask_model_clintox_predictions.json
tests/: benchmark.py  cosine_similarity.py  evaluation_test.py  evaluator_test.py  judge_test.py  memory_read.py  pricing_test.py  scenario_rubric_test.py  test_pricing.py  tools_manager_test.py  workflow_evaluator_test.py
tools_server/: deploy.py
(+456 files in other folders)
