[project]
name = "mimosa-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "dotenv",
    "fastmcp>=2.5.0",
    "langgraph>=0.4.7",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "openai>=1.100.2",
    "psutil>=5.9.0",
    "python-a2a>=0.5.9",
    "requests>=2.31.0",
    "sentence-transformers==5.0.0",
    "smolagents[all]>=1.21.1",
    "torch>=1.11.0",
]

[tool.ruff]
line-length = 88
fix = true
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "sources/modules",
    "sources/workflows", # contains dynamically generated workflow files that shouldn't be linted
    "sources/memory", # contains JSON memory files and runtime data
    "tmp", # temporary files used by WorkflowRunner
    "./tmp", # temporary files used by WorkflowRunner
    "main.py",
    "sources/prompts"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # # pydocstyle
    # "D"
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "SIM103",  # Return negated condition directly (style preference)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
