[project]
name = "mimosa-ai"
version = "1.0.0"
description = "Self-evolving AI-Framework for Autonomous Scientific Research"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dotenv",
    "fastmcp>=2.5.0",
    "requests>=2.31.0",
    "smolagents[litellm,mlx-lm,telemetry,mcp]>=1.21.1",
    "langgraph>=0.4.7",
    "matplotlib>=3.9.0",
    "numpy>=2.3.0",
    "sentence-transformers==5.1.2",
    "litellm>=1.77.7",
    "openai==1.99.9",
    "python-a2a>=0.5.9",
    "psutil>=5.9.0",
    "pygame>=2.5.0",
    "torch>=1.11.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "pillow>=11.3.0",
]

[tool.ruff]
line-length = 88
fix = true
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "sources/modules",
    "sources/workflows", # contains dynamically generated workflow files that shouldn't be linted
    "sources/memory", # contains JSON memory files and runtime data
    "tmp", # temporary files used by WorkflowRunner
    "./tmp", # temporary files used by WorkflowRunner
    "main.py",
    "sources/prompts"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # # pydocstyle
    # "D"
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "SIM103",  # Return negated condition directly (style preference)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
